# notification-backend

./: .env.example  pyproject.toml
app/: main.py
app/core/: cache.py  config.py  db.py  logger.py  middleware.py
app/dependencies/: auth.py
app/models/: __init__.py  users.py
app/repositories/: __init__.py  users.py
